--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,20 @@
 version: "3"
+
+networks:
+  the-black-network:
+
 services:
+  nginx:
+    image: nginx:stable-alpine
+    container_name: nginx
+    ports:
+      - "8080:80"
+    volumes:
+      - ./backend:/var/www/html
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+    networks:
+      - the-black-network
+
   webapp:
     container_name: webapp
     stdin_open: true
@@ -13,3 +28,5 @@ services:
     volumes:
       - ./webapp/src:/usr/src/app/src
       - /usr/src/app/node_modules
+    networks:
+      - the-black-network
