--- a/webapp/Dockerfile
+++ b/webapp/Dockerfile
@@ -2,10 +2,10 @@ FROM node:10
 
 WORKDIR /usr/src/app
 
-COPY package*.json ./
+COPY package*.json .
 
 RUN npm install
 
-COPY . ./
+COPY . .
 
 CMD [ "npm", "start" ]
