--- a/webapp/package.json
+++ b/webapp/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "formik": "^2.1.4",
+    "rc-switch": "^3.1.0",
     "react": "^16.13.1",
+    "react-circular-progressbar": "^2.0.3",
     "react-dom": "^16.13.1",
+    "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-transition-group": "^4.4.1",
