Adjust topnav to mobile devices

--- a/webapp/package.json
+++ b/webapp/package.json
@@ -14,11 +14,13 @@
     "formik": "^2.1.4",
     "rc-switch": "^3.1.0",
     "react": "^16.13.1",
+    "react-big-calendar": "^0.24.6",
     "react-circular-progressbar": "^2.0.3",
     "react-dom": "^16.13.1",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
+    "react-table": "6.10.3",
     "react-transition-group": "^4.4.1",
     "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
