--- a/webapp/package.json
+++ b/webapp/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "formik": "^2.1.4",
     "rc-switch": "^3.1.0",
@@ -20,7 +21,7 @@
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
-    "react-table": "6.10.3",
+    "react-table": "^7.1.0",
     "react-transition-group": "^4.4.1",
     "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
