--- a/webapp/package.json
+++ b/webapp/package.json
@@ -13,7 +13,9 @@
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "formik": "^2.1.4",
-    "rc-switch": "^3.1.0",
+    "moment": "2.26.0",
+    "prop-types": "^15.7.2",
+    "rc-switch": "^3.2.0",
     "react": "^16.13.1",
     "react-big-calendar": "^0.24.6",
     "react-circular-progressbar": "^2.0.3",
