--- a/webapp/package.json
+++ b/webapp/package.json
@@ -2,32 +2,34 @@
   "name": "webapp",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --open"
+    "start": "webpack-dev-server --config ./webpack.dev.config.js",
+    "start:docker": "webpack-dev-server --config ./webpack.dev.config.js --host 0.0.0.0"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "formik": "^2.1.4",
-    "moment": "2.26.0",
+    "moment": "^2.27.0",
     "prop-types": "^15.7.2",
     "rc-switch": "^3.2.0",
     "react": "^16.13.1",
+    "react-avatar": "^3.9.6",
     "react-big-calendar": "^0.24.6",
     "react-circular-progressbar": "^2.0.3",
+    "react-datepicker": "^3.0.0",
     "react-dom": "^16.13.1",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
-    "react-table": "^7.1.0",
+    "react-table": "7.1.0",
     "react-transition-group": "^4.4.1",
     "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "yup": "^0.29.1"
   },
   "browserslist": [
     ">0.2%",
@@ -36,26 +38,30 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@babel/core": "^7.9.6",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/polyfill": "^7.8.7",
-    "@babel/preset-env": "^7.9.6",
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "@babel/plugin-transform-runtime": "^7.10.1",
+    "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^6.0.1",
     "css-loader": "^3.5.3",
-    "eslint": "^7.0.0",
+    "dotenv": "^8.2.0",
+    "dotenv-webpack": "^1.8.0",
+    "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.20.0",
-    "eslint-plugin-react-hooks": "^4.0.2",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^2.5.1",
     "file-loader": "^6.0.0",
     "html-loader": "^1.1.0",
-    "html-webpack-plugin": "^4.3.0",
+    "html-webpack-plugin": "^4.2.1",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
     "prettier": "^2.0.5",
-    "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
